@@ -8,6 +8,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   handling ACLs on Cygwin and Solaris platforms. [bug introduced in
   coreutils-8.24]
 
+  cp --parents --no-preserve=mode, no longer copies permissions from source
+  directories, instead using default permissions for created directories.
+  [bug introduced in coreutils-5.93]
+
   chcon, chgrp, chmod, chown, du, and rm, or specifically utilities
   using the FTS interface, now diagnose failures returned by readdir().
   [this bug was inherent in the use of fts: thus, for rm the bug was
